--- a/index.html
+++ b/index.html
@@ -17,30 +17,183 @@
     <header class="cabecalho">
         <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
         <img src="/assets/img/logo.png" alt="Logotipo da Petiscaria Dona do Pedaco" class="cabecalho__logo">
+        <p class="cabecalho__perfil">Bruno Lopes</p>
         <button class="cabecalho__noficacao" aria-label="Notificação"><i></i></button>
     </header>
-    <nav class="menu-lateral .menu-lateral--ativo">
+    <nav class="menu-lateral">
         <img src="/assets/img/logo.png" alt="Logo Petiscaria Dona do Pedaco" class="menu-lateral__logo">
-        <a href="" class="menu-lateral__link menu-lateral__link--home menu-lateral__link--ativo">Home</a>
-        <a href="" class="menu-lateral__link menu-lateral__link--loginb ">Login</a>
-        <a href="" class="menu-lateral__link menu-lateral__link--agenda">Agenda Semanal</a>
-        <a href="" class="menu-lateral__link menu-lateral__link--cardapio">Cardápio</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--home menu-lateral__link--ativo">Home</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--loginb ">Login</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--agenda">Agenda Semanal</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--cardapio">Cardápio</a>
         <a href="" class="menu-lateral__link menu-lateral__link--localizacao">Localização</a>
-        <a href="" class="menu-lateral__link menu-lateral__link--contato">Contato</a>
+        <a href="#" class="menu-lateral__link menu-lateral__link--contato">Contato</a>
     </nav>
     <main class="principal">
         <h2 class="titulo-pagina">Home</h2>
-        <article class="cartao">
+        <article class="cartao  cartao--destaque">
             <img src="/assets/img/banner-mobile_1.png" alt="banner" class="cartao__imagem">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Vídeo em Destaque</p>
                 <h3 class="cartao__titulo">Titulo</h3>
                 <p class="cartao__perfil">Débora</p>
-                <p class=""></p>
-
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
             </div>
         </article>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <a href="#" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+            </ul>
+        </article>
 
+        <section class="secao">
+            <h3 class="titulo-secao">Vídeos mais vistos</h3>
+            <article class="cartao">
+                <img src="/assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Débora</p>
+                    <h3 class="cartao__titulo">Titulo</h3>
+                   <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="/assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Débora</p>
+                    <h3 class="cartao__titulo">Titulo</h3>
+                   <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="/assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Débora</p>
+                    <h3 class="cartao__titulo">Titulo</h3>
+                   <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="/assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Débora</p>
+                    <h3 class="cartao__titulo">Titulo</h3>
+                   <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+        </section>
+        <article class="cartao cartao--recentes">
+            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <a href="#" class="cartao__link">Ver todos</a>
+            <ul class="cartao__lista">
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+                <li class="cartao__item">
+                    <img src="/assets/img/miniatura_1.png" alt="tumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC love machine</h4>
+                    <p class="cartao__item-perfil">Bruno lopes</p>
+                </li>
+            </ul>
+        </article>
+        <article class="cartao  cartao--destaque">
+            <img src="/assets/img/banner-mobile_1.png" alt="banner" class="cartao__imagem">
+            <div class="cartao__conteudo">
+                <p class="cartao__destaque">Vídeo em Destaque</p>
+                <h3 class="cartao__titulo">Titulo</h3>
+                <p class="cartao__perfil">Débora</p>
+                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+            </div>
+        </article>
+        <section class="secao">
+            <h3 class="titulo-secao">Vídeos mais vistos</h3>
+            <article class="cartao">
+                <img src="/assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Débora</p>
+                    <h3 class="cartao__titulo">Titulo</h3>
+                   <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="/assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Débora</p>
+                    <h3 class="cartao__titulo">Titulo</h3>
+                   <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="/assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Débora</p>
+                    <h3 class="cartao__titulo">Titulo</h3>
+                   <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+            <article class="cartao">
+                <img src="/assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Débora</p>
+                    <h3 class="cartao__titulo">Titulo</h3>
+                   <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                </div>
+            </article>
+        </section>
     </main>
     <script src="index.js"></script>
 
